Fixing alignment of header nav links

--- a/react-ui/src/components/Header/header.scss
+++ b/react-ui/src/components/Header/header.scss
@@ -9,15 +9,15 @@
         position: absolute;
     }
 
-    a, img {
-        width: 261px;
-        height: 55px;
-    }
-
     .logo-hamburger {
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        a, img {
+            width: 261px;
+            height: 55px;
+        }
     }
 
     nav {
@@ -36,7 +36,7 @@
         .nav-link {
             color: $nav-link-color;
             text-decoration: none;
-            padding: 1em 0;
+            padding: 1em;
             display: block;
             text-transform: uppercase;
             font-size: .875rem;
@@ -44,7 +44,6 @@
             &-active {
                 color: $color-purple;
                 text-decoration: none;
-                padding: 1em 0;
                 display: block;
                 text-transform: uppercase;
                 font-size: .875rem;
@@ -93,8 +92,8 @@
             align-items: center;
             position: relative;
             right: -($nav-link-padding);
-            a {
-                padding: $nav-link-padding;
+            .nav-link {
+                padding: 1em $nav-link-padding;
             }
         }
     }
